tests/machine/x/python/left_join.error
run: exit status 1
--- Left Join ---
Traceback (most recent call last):
  File "/workspace/mochi/tests/machine/x/python/left_join.py", line 111, in <module>
    entry["orderId"],
    ~~~~~^^^^^^^^^^^
TypeError: 'Auto1' object is not subscriptable

